# CPP_Convex_Hulls

./: CMakeLists.txt  README.md  convex_hulls_.json
apps/: app.cpp
include/: convex_hull.hpp
src/: convex_hull.cpp
tests/: convex_hull_test.cpp  json_test.cpp  line_test.cpp  matrix_test.cpp  point_test.cpp
